ADD: pagination restaurant, filter by criteria